After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 733728 - back button works once, for second time you need to move mouse from and back to it
back button works once, for second time you need to move mouse from and back ...
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
3.10.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-07-25 10:29 UTC by Branko Grubic (bitlord)
Modified: 2014-07-31 15:28 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Branko Grubic (bitlord) 2014-07-25 10:29:57 UTC
In gnome-software-3.10.4-2.fc20.x86_64 ( gtk3-3.10.9-1.fc20.x86_64 ) when you need to go two or more times back, button works only once, then you need to move mouse cursor out of it, and back to be able to go back one more step.

To reproduce this, open gnome-software, chose random category and random application inside of it ( to be "two levels down"), try to go back (back button '<' top left corner) and it works only for first time, then you need to move mouse cursor from the button and back to be able to click again and go back one step.
Comment 1 Kalev Lember 2014-07-25 10:34:54 UTC
I can reproduce this with latest gtk+ and gnome-software. Interestingly, it works correctly in the update dialog but not in the main window.